# ELEVATE

./: CMakeLists.txt  README.md  llm_scanner_boilerplate.cpp  start-elevate.ps1
elv/: .gitignore  ALL_BUILD.vcxproj  CHANGELOG.md  CMakeCache.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  elevate_backend.sln  elevate_backend.vcxproj  elevate_backend.vcxproj.filters  package-lock.json  package.json  tsconfig.json
elv/elevate_backend.dir/Debug/: elevate_backend.exe.recipe
elv/elevate_backend.dir/Debug/elevate_backend.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
elv/src/: extension.ts
elv/ui/: package-lock.json  package.json  vite.config.ts
elv/ui/src/: App.tsx
elv/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
elv/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
elv/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
elv/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
